# mercury

./: .gitignore  CMakeLists.txt  build.sh  build_example.sh  build_s117.sh  bulk_c.sh  bulk_c_63.sh  bulk_s.sh  bulk_s_63.sh  gitpush.sh  gitsubmodule_cache.tgz  readme  rebuild.sh  rebuild_hpc.sh  rsync_to_s64.sh  run_hg_example_rpc.sh  s.sh  v2.3.1rc1
.vscode_example/: c.json  launch.json  sdn_c.json
Examples/src/: CMakeLists.txt  bulk_client.c  bulk_server.c  client.c  example_rpc.h  example_rpc_client.c  example_rpc_server.c  server.c  types.h
category/: build_log_s63  bulk_c_log  bulk_c_tcp  bulk_s_log  launch.json  launch.json_debug  libfabric  libfabric_struct  merucry_bulk_libfabric  na  rdma
doc/: hg_example_rpc_server_use_rdma.md  mercury_note.md
log/hg_example_rpc/: hg_example_rpc_client_mlx_ok_log  hg_example_rpc_server_xt_start_log  hg_example_rpc_server_xt_start_ok_log
mercury/05_bulk/: CMakeLists.txt  README.md  build.sh  server.c
src/: CMakeLists.txt  mercury.c  mercury_core_types.h
src/na/: CMakeLists.txt  na_types.h
